Refactor container label definitions to support variable keys using items2dict pattern
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/vars/main.yml
@@ -27,11 +27,15 @@ authentik_redis_env_vars_base: {}
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 authentik_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ authentik_name }}.rule: Host(`{{ authentik_traefik_host }}`)
-  traefik.http.routers.{{ authentik_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-authentik_container_labels_base: "{{ authentik_traefik_enable | ternary(authentik_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ authentik_name }}.rule
+    value: Host(`{{ authentik_traefik_host }}`)
+  - key: traefik.http.routers.{{ authentik_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+authentik_container_labels_base: "{{ authentik_traefik_enable | ternary((authentik_container_labels_traefik | items2dict), {}) }}"
 
 authentik_worker_container_labels_base: {}
 
