--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
@@ -31,11 +31,15 @@ immich_redis_env_vars_base: "{{ common_env_vars_base }}"
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 immich_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ immich_name }}.rule: Host(`{{ immich_traefik_host }}`)
-  traefik.http.routers.{{ immich_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-immich_container_labels_base: "{{ immich_traefik_enable | ternary(immich_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ immich_name }}.rule
+    value: Host(`{{ immich_traefik_host }}`)
+  - key: traefik.http.routers.{{ immich_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+immich_container_labels_base: "{{ immich_traefik_enable | ternary((immich_container_labels_traefik | items2dict), {}) }}"
 
 immich_machine_learning_container_labels_base: {}
 
