--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
@@ -11,11 +11,15 @@ tautulli_env_vars_base: "{{ common_env_vars_base }}"
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 tautulli_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ tautulli_name }}.rule: Host(`{{ tautulli_traefik_host }}`)
-  traefik.http.routers.{{ tautulli_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-tautulli_container_labels_base: "{{ tautulli_traefik_enable | ternary(tautulli_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ tautulli_name }}.rule
+    value: Host(`{{ tautulli_traefik_host }}`)
+  - key: traefik.http.routers.{{ tautulli_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+tautulli_container_labels_base: "{{ tautulli_traefik_enable | ternary((tautulli_container_labels_traefik | items2dict), {}) }}"
 
 ###############################################################################
 # Quadlet Options
