--- a/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
@@ -14,11 +14,15 @@ vault_env_vars_base: "{{ common_env_vars_base }}"
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 vault_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ vault_name }}.rule: Host(`{{ vault_traefik_host }}`)
-  traefik.http.routers.{{ vault_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-vault_container_labels_base: "{{ vault_traefik_enable | ternary(vault_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ vault_name }}.rule
+    value: Host(`{{ vault_traefik_host }}`)
+  - key: traefik.http.routers.{{ vault_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+vault_container_labels_base: "{{ vault_traefik_enable | ternary((vault_container_labels_traefik | items2dict), {}) }}"
 
 ###############################################################################
 # Quadlet Options
