--- a/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/vars/main.yml
@@ -50,22 +50,30 @@ archiveium_meilisearch_env_vars_base: "{{ common_env_vars_base | combine(archive
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 archiveium_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ archiveium_name }}.rule: Host(`{{ archiveium_traefik_host }}`)
-  traefik.http.routers.{{ archiveium_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-archiveium_container_labels_base: "{{ archiveium_traefik_enable | ternary(archiveium_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ archiveium_name }}.rule
+    value: Host(`{{ archiveium_traefik_host }}`)
+  - key: traefik.http.routers.{{ archiveium_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+archiveium_container_labels_base: "{{ archiveium_traefik_enable | ternary((archiveium_container_labels_traefik | items2dict), {}) }}"
 
 archiveium_cron_container_labels_base: {}
 archiveium_postgres_container_labels_base: {}
 archiveium_minio_container_labels_base: {}
 archiveium_redis_container_labels_base: {}
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 archiveium_meilisearch_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ archiveium_name }}.rule: Host(`{{ archiveium_meilisearch_traefik_host }}`)
-  traefik.http.routers.{{ archiveium_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-archiveium_meilisearch_container_labels_base: "{{ archiveium_traefik_enable | ternary(archiveium_meilisearch_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ archiveium_name }}-meilisearch.rule
+    value: Host(`{{ archiveium_meilisearch_traefik_host }}`)
+  - key: traefik.http.routers.{{ archiveium_name }}-meilisearch.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+archiveium_meilisearch_container_labels_base: "{{ archiveium_traefik_enable | ternary((archiveium_meilisearch_container_labels_traefik | items2dict), {}) }}"
 
 ###############################################################################
 # Quadlet Options
