--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/vars/main.yml
@@ -31,25 +31,41 @@ bar_assistant_meilisearch_env_vars_base: "{{ common_env_vars_base | combine(bar_
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 bar_assistant_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ bar_assistant_name }}.rule: Host(`{{ bar_assistant_traefik_host }}`)
-  traefik.http.routers.{{ bar_assistant_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-bar_assistant_container_labels_base: "{{ bar_assistant_traefik_enable | ternary(bar_assistant_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ bar_assistant_name }}.rule
+    value: Host(`{{ bar_assistant_traefik_host }}`)
+  - key: traefik.http.routers.{{ bar_assistant_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+bar_assistant_container_labels_base: "{{ bar_assistant_traefik_enable | ternary((bar_assistant_container_labels_traefik | items2dict), {}) }}"
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 bar_assistant_salt_rim_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ bar_assistant_name }}.rule: Host(`{{ bar_assistant_salt_rim_traefik_host }}`)
-  traefik.http.routers.{{ bar_assistant_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-bar_assistant_salt_rim_container_labels_base: "{{ bar_assistant_traefik_enable | ternary(bar_assistant_salt_rim_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ bar_assistant_name }}-salt-rim.rule
+    value: Host(`{{ bar_assistant_salt_rim_traefik_host }}`)
+  - key: traefik.http.routers.{{ bar_assistant_name }}-salt-rim.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+bar_assistant_salt_rim_container_labels_base: "{{ bar_assistant_traefik_enable | ternary((bar_assistant_salt_rim_container_labels_traefik | items2dict), {}) }}"
 
 bar_assistant_redis_container_labels_base: {}
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 bar_assistant_meilisearch_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ bar_assistant_name }}.rule: Host(`{{ bar_assistant_meilisearch_traefik_host }}`)
-  traefik.http.routers.{{ bar_assistant_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-bar_assistant_meilisearch_container_labels_base: "{{ bar_assistant_traefik_enable | ternary(bar_assistant_meilisearch_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ bar_assistant_name }}-meilisearch.rule
+    value: Host(`{{ bar_assistant_meilisearch_traefik_host }}`)
+  - key: traefik.http.routers.{{ bar_assistant_name }}-meilisearch.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+bar_assistant_meilisearch_container_labels_base: >-
+  {{
+    bar_assistant_traefik_enable |
+    ternary((bar_assistant_meilisearch_container_labels_traefik | items2dict), {})
+  }}
 
 ###############################################################################
 # Quadlet Options
