--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/vars/main.yml
@@ -11,11 +11,15 @@ calibre_env_vars_base: "{{ common_env_vars_base }}"
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 calibre_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ calibre_name }}.rule: Host(`{{ calibre_traefik_host }}`)
-  traefik.http.routers.{{ calibre_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-calibre_container_labels_base: "{{ calibre_traefik_enable | ternary(calibre_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ calibre_name }}.rule
+    value: Host(`{{ calibre_traefik_host }}`)
+  - key: traefik.http.routers.{{ calibre_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+calibre_container_labels_base: "{{ calibre_traefik_enable | ternary((calibre_container_labels_traefik | items2dict), {}) }}"
 
 ###############################################################################
 # Quadlet Options
