--- a/collections/ansible_collections/jaredhocutt/homelab/roles/healthchecks/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/healthchecks/vars/main.yml
@@ -16,11 +16,15 @@ healthchecks_env_vars_base: "{{ common_env_vars_base | combine(healthchecks_env_
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 healthchecks_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ healthchecks_name }}.rule: Host(`{{ healthchecks_traefik_host }}`)
-  traefik.http.routers.{{ healthchecks_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-healthchecks_container_labels_base: "{{ healthchecks_traefik_enable | ternary(healthchecks_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ healthchecks_name }}.rule
+    value: Host(`{{ healthchecks_traefik_host }}`)
+  - key: traefik.http.routers.{{ healthchecks_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+healthchecks_container_labels_base: "{{ healthchecks_traefik_enable | ternary((healthchecks_container_labels_traefik | items2dict), {}) }}"
 
 ###############################################################################
 # Quadlet Options
