--- a/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/vars/main.yml
@@ -13,11 +13,15 @@ homarr_env_vars_base: "{{ common_env_vars_base | combine(homarr_env_vars_base_cu
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 homarr_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ homarr_name }}.rule: Host(`{{ homarr_traefik_host }}`)
-  traefik.http.routers.{{ homarr_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-homarr_container_labels_base: "{{ homarr_traefik_enable | ternary(homarr_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ homarr_name }}.rule
+    value: Host(`{{ homarr_traefik_host }}`)
+  - key: traefik.http.routers.{{ homarr_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+homarr_container_labels_base: "{{ homarr_traefik_enable | ternary((homarr_container_labels_traefik | items2dict), {}) }}"
 
 ###############################################################################
 # Quadlet Options
