--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tandoor/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tandoor/vars/main.yml
@@ -28,11 +28,15 @@ tandoor_postgres_env_vars_base: "{{ common_env_vars_base | combine(tandoor_postg
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 tandoor_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ tandoor_name }}.rule: Host(`{{ tandoor_traefik_host }}`)
-  traefik.http.routers.{{ tandoor_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-tandoor_container_labels_base: "{{ tandoor_traefik_enable | ternary(tandoor_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ tandoor_name }}.rule
+    value: Host(`{{ tandoor_traefik_host }}`)
+  - key: traefik.http.routers.{{ tandoor_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+tandoor_container_labels_base: "{{ tandoor_traefik_enable | ternary((tandoor_container_labels_traefik | items2dict), {}) }}"
 
 tandoor_postgres_container_labels_base: {}
 
