--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
@@ -11,11 +11,15 @@ uptime_kuma_env_vars_base: "{{ common_env_vars_base }}"
 # Container Labels
 ###############################################################################
 
+# This is done as a list and converted to a dict in order to use variables in the key name
 uptime_kuma_container_labels_traefik:
-  traefik.enable: true
-  traefik.http.routers.{{ uptime_kuma_name }}.rule: Host(`{{ uptime_kuma_traefik_host }}`)
-  traefik.http.routers.{{ uptime_kuma_name }}.entrypoints: "{{ common_traefik_entrypoint }}"
-uptime_kuma_container_labels_base: "{{ uptime_kuma_traefik_enable | ternary(uptime_kuma_container_labels_traefik, {}) }}"
+  - key: traefik.enable
+    value: "true"
+  - key: traefik.http.routers.{{ uptime_kuma_name }}.rule
+    value: Host(`{{ uptime_kuma_traefik_host }}`)
+  - key: traefik.http.routers.{{ uptime_kuma_name }}.entrypoints
+    value: "{{ common_traefik_entrypoint }}"
+uptime_kuma_container_labels_base: "{{ uptime_kuma_traefik_enable | ternary((uptime_kuma_container_labels_traefik | items2dict), {}) }}"
 
 ###############################################################################
 # Quadlet Options
