Add URL variables to defaults for Bar Assistant, Paperless, and Warracker roles
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/defaults/main.yml
@@ -41,3 +41,6 @@ bar_assistant_quadlet_options: []
 bar_assistant_salt_rim_quadlet_options: []
 bar_assistant_redis_quadlet_options: []
 bar_assistant_meilisearch_quadlet_options: []
+
+bar_assistant_api_url: https://{{ bar_assistant_traefik_host }}
+bar_assistant_meilisearch_url: https://{{ bar_assistant_meilisearch_traefik_host }}
