--- a/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/defaults/main.yml
@@ -24,3 +24,5 @@ warracker_postgres_container_labels: {}
 
 warracker_quadlet_options: []
 warracker_postgres_quadlet_options: []
+
+warracker_url: https://{{ warracker_traefik_host }}
