--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ dependencies = [
     "ansible-creator (>=25.9)",
     "ansible-navigator (>=25.9)",
     "ansible-lint (>=25.9)",
+    "bitwarden-sdk (>=1.0,<1.1)",
     "jmespath (>=1.0,<1.1)",
-    "bitwarden-sdk (>=1.0,<1.1)"
+    "molecule (>=25.11,<25.12)",
+    "molecule-plugins[podman] (>=25.8,<25.9)",
 ]
 
 [tool.poetry]
