Setup ansible-navigator and a custom execution environment
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .logs/*
+.poetry/
 *.retry
 *.vault
 collections/*
@@ -8,6 +9,7 @@ collections/ansible_collections/*
 !collections/ansible_collections/jaredhocutt
 collections/ansible_collections/jaredhocutt/*
 !collections/ansible_collections/jaredhocutt/homelab
+
 # https://raw.githubusercontent.com/github/gitignore/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
