--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,23 +9,30 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
-    "ansible-core (>=2.19,<2.20)",
-    "ansible-builder (>=3.1,<3.2)",
-    "ansible-creator (>=25.9)",
-    "ansible-navigator (>=25.9)",
-    "ansible-lint (>=25.9)",
-    "bitwarden-sdk (>=1.0,<1.1)",
-    "jmespath (>=1.0,<1.1)",
-    "molecule (>=25.11,<25.12)",
-    "molecule-plugins[podman] (>=25.8,<25.9)",
+    "ansible-core~=2.19.0",
+    "bitwarden-sdk~=1.0.0",
+    "jmespath~=1.0.0",
 ]
 
 [tool.poetry]
 package-mode = false
 
 [tool.poetry.group.dev.dependencies]
-pylint = "^3.3.8"
-flake8 = "^7.3.0"
+ansible-builder = "~=3.1.0"
+ansible-creator = "~=25.11.0"
+ansible-lint = "~=25.11.0"
+ansible-navigator = "~=25.11.0"
+flake8 = "~=7.3"
+molecule = "~=25.11.0"
+molecule-plugins = {version = "~=25.8", extras = ["podman"]}
+pylint = "~=4.0"
+taskipy = "~=1.14"
+
+[tool.poetry.requires-plugins]
+poetry-plugin-export = "~=1.9"
+
+[tool.taskipy.tasks]
+build-ee = "ansible-navigator builder build --tag localhost/homelab-ee:latest --verbosity 3 --context .ansible/context --prune-images"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
