Move media related apps to media host
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/inventory/group_vars/linux.yml
+++ b/inventory/group_vars/linux.yml
@@ -21,3 +21,14 @@ server_setup_packages:
 
 server_setup_enabled_services:
   - cockpit.socket
+
+global_volume_download: download
+
+global_volume_media: media
+global_volume_media_options:
+  - Device={{ lookup('bitwarden.secrets.lookup', bws_uuid.global_storage_host) }}:/mnt/data/media
+  - Type=nfs
+  - Options=soft,nfsvers=3
+
+global_media_uid: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.global_media_uid) }}"
+global_media_gid: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.global_media_gid) }}"
