--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -8,6 +8,10 @@ all:
       ansible_host: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.ansible_host_router) }}"
     apps:
       ansible_host: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.ansible_host_apps) }}"
+    media:
+      ansible_host: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.ansible_host_media) }}"
+
 linux:
   hosts:
     apps: {}
+    media: {}
